index.css: Fix .end-text color at dark mode

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,6 +15,16 @@
   .product-container,
   .product-image-container,
   .popup-image-container {
-    border-color: white;
+    border-color: #adadad;
+  }
+
+  .end-text {
+    border-color: #adadad;
+    color: white;
+  }
+
+  .end-text:hover {
+    background-color: #0f172a;
+    color: white;
   }
 }
